--- a/app/src/main/res/layout/fragment_trip_detail.xml
+++ b/app/src/main/res/layout/fragment_trip_detail.xml
@@ -10,7 +10,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Daftar Wisata"
+            android:text="Point of Interest Visited"
             android:textSize="18dp"/>
         <LinearLayout
             android:id="@+id/frame_poi_list"
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Daftar Kuliner"
+            android:text="Culinary Visited"
             android:textSize="18dp"/>
         <LinearLayout
             android:id="@+id/frame_restaurant_list"
@@ -46,7 +46,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Souvenir"
+            android:text="Souvenir Shop Recommendation"
             android:textSize="18dp"/>
         <LinearLayout
             android:id="@+id/frame_souvenir_list"
