--- a/app/src/main/res/layout/fragment_trip_planner_home.xml
+++ b/app/src/main/res/layout/fragment_trip_planner_home.xml
@@ -17,8 +17,8 @@
         android:layout_gravity="bottom|end"
         android:tint="@color/white"
         fab:fab_icon="@android:drawable/ic_input_add"
-        fab:fab_colorNormal="@color/pink"
-        fab:fab_colorPressed="@color/pink_pressed"
+        fab:fab_colorNormal="@color/button_green"
+        fab:fab_colorPressed="@color/green"
         android:stateListAnimator="@anim/button_elevation"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"/>
