--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="colorAccent">@color/button_orange</item>
+        <item name="colorAccent">@color/button_green</item>
         <item name="android:textColorPrimary">@color/white</item>
 
         <!--<item name="android:windowContentOverlay">@null</item> ilangin shadow-->
