correct typo in hotel detail

--- a/app/src/main/res/layout/fragment_hotel_detail.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail.xml
@@ -164,7 +164,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Restaurant Telephone"
+                android:text="Hotel Telephone"
                 android:layout_marginTop="5dp"
                 android:textSize="14dp"
                 android:gravity="center"
