--- a/app/src/main/res/layout/dialog_new_trip.xml
+++ b/app/src/main/res/layout/dialog_new_trip.xml
@@ -80,7 +80,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Culinary Budget" />
+                android:text="Restaurant Budget" />
 
             <Spinner
                 android:id="@+id/spinner_restaurant_budget"
