--- a/app/src/main/res/layout/fragment_trip_planner_result.xml
+++ b/app/src/main/res/layout/fragment_trip_planner_result.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Culinary Visited"
+            android:text="Restaurant Visited"
             android:textSize="18dp"/>
         <LinearLayout
             android:id="@+id/frame_restaurant_list"
