--- a/app/src/main/res/layout/fragment_trip_planner_result.xml
+++ b/app/src/main/res/layout/fragment_trip_planner_result.xml
@@ -10,27 +10,39 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Point of Interest Visited"
+            android:text="Trip Result"
             android:textSize="18dp"/>
         <LinearLayout
-            android:id="@+id/frame_poi_list"
+            android:id="@+id/frame_trip_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Restaurant Visited"
-            android:textSize="18dp"/>
-        <LinearLayout
-            android:id="@+id/frame_restaurant_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"/>
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Point of Interest Visited"-->
+            <!--android:textSize="18dp"/>-->
+        <!--<LinearLayout-->
+            <!--android:id="@+id/frame_poi_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:layout_marginBottom="20dp"/>-->
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Restaurant Visited"-->
+            <!--android:textSize="18dp"/>-->
+        <!--<LinearLayout-->
+            <!--android:id="@+id/frame_restaurant_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:layout_marginBottom="20dp"/>-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
