--- a/app/src/main/res/layout/fragment_trip_detail.xml
+++ b/app/src/main/res/layout/fragment_trip_detail.xml
@@ -43,5 +43,17 @@
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Transportation Used"
+            android:textSize="18dp"/>
+        <LinearLayout
+            android:id="@+id/frame_transportation_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"/>
     </LinearLayout>
 </ScrollView>
