fix crash after trip delete, sorg trip by trip name, remove wifi logo on no internet connection

--- a/app/src/main/res/layout/message_no_internet_connection.xml
+++ b/app/src/main/res/layout/message_no_internet_connection.xml
@@ -7,10 +7,10 @@
     android:background="@color/white"
     android:gravity="center">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_big_wifi"/>
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/icon_big_wifi"/>-->
 
     <View
         android:layout_width="match_parent"
