--- a/app/src/main/res/layout/fragment_trip_planner_result.xml
+++ b/app/src/main/res/layout/fragment_trip_planner_result.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/frame_package_list"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
